<resources>
    <string name="app_name">Calcular</string>
    <string name="numero1">Número 1</string>
    <string name="numero2">Número 2</string>
    <string name="resultado">Resultado: </string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multi">Multiplicación</string>
    <string name="div">Division</string>
    <string name="opcion">Seleccione la operación: </string>
    <string name="send">Enviar</string>
</resources>
